Inset: VCol not correctly initiated for new vertices #45954

Closed
opened 2015-08-29 20:08:27 +02:00 by João Pereira Lemos Costa · 9 comments

System Information
Windows 10, NVidia GeForce GTX 765M

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Short description of error

After an inset the normals of the surface start acting weird, having shadows where it's not suposed to.

2015-08-29_19-45-31.png

2015-08-29_19-46-39.png

This only happens when insetingn though, and when creating geometry with extrude or any other tool this doesn't happen:

2015-08-29_19-46-54.png

Further more, I can clean the results and make the shadows disappear by removing the edges that hold the faces in the region together and recreating the faces, like this:

2015-08-29_20-01-38.png

2015-08-29_20-00-39.png

But new face is in contact with one "broken" face when created it gives even wronger looking results

2015-08-29_19-47-36.png

Haven't been able to reproduce it in any other project so I don't know if its a proper bug or something I've done through the modeling processing.

Exact steps for others to reproduce the error

Boat.blend

  1. Selecting at least three faces

  2. Inseting them

**System Information** Windows 10, NVidia GeForce GTX 765M **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) **Short description of error** After an inset the normals of the surface start acting weird, having shadows where it's not suposed to. ![2015-08-29_19-45-31.png](https://archive.blender.org/developer/F229018/2015-08-29_19-45-31.png) ![2015-08-29_19-46-39.png](https://archive.blender.org/developer/F229017/2015-08-29_19-46-39.png) This only happens when insetingn though, and when creating geometry with extrude or any other tool this doesn't happen: ![2015-08-29_19-46-54.png](https://archive.blender.org/developer/F229015/2015-08-29_19-46-54.png) Further more, I can clean the results and make the shadows disappear by removing the edges that hold the faces in the region together and recreating the faces, like this: ![2015-08-29_20-01-38.png](https://archive.blender.org/developer/F229023/2015-08-29_20-01-38.png) ![2015-08-29_20-00-39.png](https://archive.blender.org/developer/F229024/2015-08-29_20-00-39.png) But new face is in contact with one "broken" face when created it gives even wronger looking results ![2015-08-29_19-47-36.png](https://archive.blender.org/developer/F229016/2015-08-29_19-47-36.png) Haven't been able to reproduce it in any other project so I don't know if its a proper bug or something I've done through the modeling processing. **Exact steps for others to reproduce the error** [Boat.blend](https://archive.blender.org/developer/F229028/Boat.blend) 1) Selecting at least three faces 2) Inseting them

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @jpereira

Added subscriber: @jpereira

Sorry for forgetting the version:

2.75a c27589e

Sorry for forgetting the version: 2.75a c27589e

Added subscriber: @mont29

Added subscriber: @mont29

This is not normals, but vertex colors, which does not get correctly initiated (or even better, interpolated?) it seems…

This is not normals, but vertex colors, which does not get correctly initiated (or even better, interpolated?) it seems…
Bastien Montagne changed title from Normals weird shading after inset to Inset: VCol not correctly initiated for new vertices 2015-08-29 21:41:55 +02:00
Campbell Barton was assigned by Bastien Montagne 2015-08-29 22:23:46 +02:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Issue is actually rather simple - interpolation as done in bm_loop_customdata_merge() cannot work well with char-based data, like CD_MLOOPCOL (a = a + b will easily overflow…).

@ideasman42 quick and dirty fix would be to do a = a * 0.5; b = b * 0.5; a = a + b; b = a; instead. Other solution would be to use CustomData_data_mix_value instead of lower-level add/multiply… Will let you decide what's best here.

Issue is actually rather simple - interpolation as done in `bm_loop_customdata_merge()` cannot work well with char-based data, like `CD_MLOOPCOL` (`a = a + b` will easily overflow…). @ideasman42 quick and dirty fix would be to do `a = a * 0.5; b = b * 0.5; a = a + b; b = a;` instead. Other solution would be to use `CustomData_data_mix_value` instead of lower-level add/multiply… Will let you decide what's best here.

This issue was referenced by 705776db1f

This issue was referenced by 705776db1fbaa5a7563d7efae89f0c984afdea6d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45954
No description provided.