Fix T45954: Inset w/ interpolated vertex color

Accumulating ubyte color was overflowing.

Thanks to @mont29 for suggested fix.